// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalDialog cancelation should render label 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined mb3"
      >
        Foo
      </div>
      <div
        class="flex justify-content flex-row-reverse min-h-regular-ns min-h-small pv6-ns ph8-ns pv7 ph7 mt3 bt b--muted-4"
      >
        <div>
          <div>
            <span
              class="mr4"
            >
              <button
                class="vtex-button bw1 ba fw5 v-mid relative pa0 lh-solid br2 min-h-small t-action--small bg-transparent b--transparent c-action-primary hover-b--transparent hover-bg-action-secondary hover-b--action-secondary pointer "
                tabindex="0"
                type="button"
              >
                <div
                  class="vtex-button__label flex items-center justify-center h-100 ph5 "
                  style="padding-top: .25em; padding-bottom: .32em;"
                >
                  cancel
                </div>
              </button>
            </span>
            <button
              class="vtex-button bw1 ba fw5 v-mid relative pa0 lh-solid br2 min-h-small t-action--small bg-action-primary b--action-primary c-on-action-primary hover-bg-action-primary hover-b--action-primary hover-c-on-action-primary pointer "
              tabindex="0"
              type="button"
            >
              <div
                class="vtex-button__label flex items-center justify-center h-100 ph5 "
                style="padding-top: .25em; padding-bottom: .32em;"
              >
                confirm
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModalDialog confirmation isDangerous CSS 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined mb3"
      >
        Foo
      </div>
      <div
        class="flex justify-content flex-row-reverse min-h-regular-ns min-h-small pv6-ns ph8-ns pv7 ph7 mt3 bt b--muted-4"
      >
        <div>
          <div>
            <span
              class="mr4"
            >
              <button
                class="vtex-button bw1 ba fw5 v-mid relative pa0 lh-solid br2 min-h-small t-action--small bg-transparent b--transparent c-action-primary hover-b--transparent hover-bg-action-secondary hover-b--action-secondary pointer "
                tabindex="0"
                type="button"
              >
                <div
                  class="vtex-button__label flex items-center justify-center h-100 ph5 "
                  style="padding-top: .25em; padding-bottom: .32em;"
                >
                  cancel
                </div>
              </button>
            </span>
            <button
              class="vtex-button bw1 ba fw5 v-mid relative pa0 lh-solid br2 min-h-small t-action--small bg-danger b--danger c-on-danger hover-bg-danger hover-b--danger hover-c-on-danger pointer "
              tabindex="0"
              type="button"
            >
              <div
                class="vtex-button__label flex items-center justify-center h-100 ph5 "
                style="padding-top: .25em; padding-bottom: .32em;"
              >
                cancel
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModalDialog confirmation should render label 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined mb3"
      >
        Foo
      </div>
      <div
        class="flex justify-content flex-row-reverse min-h-regular-ns min-h-small pv6-ns ph8-ns pv7 ph7 mt3 bt b--muted-4"
      >
        <div>
          <div>
            <span
              class="mr4"
            >
              <button
                class="vtex-button bw1 ba fw5 v-mid relative pa0 lh-solid br2 min-h-small t-action--small bg-transparent b--transparent c-action-primary hover-b--transparent hover-bg-action-secondary hover-b--action-secondary pointer "
                tabindex="0"
                type="button"
              >
                <div
                  class="vtex-button__label flex items-center justify-center h-100 ph5 "
                  style="padding-top: .25em; padding-bottom: .32em;"
                >
                  cancel
                </div>
              </button>
            </span>
            <button
              class="vtex-button bw1 ba fw5 v-mid relative pa0 lh-solid br2 min-h-small t-action--small bg-action-primary b--action-primary c-on-action-primary hover-bg-action-primary hover-b--action-primary hover-c-on-action-primary pointer "
              tabindex="0"
              type="button"
            >
              <div
                class="vtex-button__label flex items-center justify-center h-100 ph5 "
                style="padding-top: .25em; padding-bottom: .32em;"
              >
                confirm
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModalDialog loading CSS 1`] = `
<div>
  <div
    class="vtex-modal__overlay flex fixed z-max overflow-hidden bg-black-70 absolute--fill outline-0 items-center"
    data-testid="modal__overlay"
    role="presentation"
    tabindex="-1"
  >
    <div
      aria-labelledby="vtex-modal__title"
      aria-modal="true"
      class="vtex-modal__modal flex flex-column relative bg-white shadow-5 center mv9 br2 undefined vw-90"
      data-testid="modal__modal"
      role="dialog"
    >
      <div>
        <div
          class="min-h-regular min-h-large-ns pl6 pl8-ns"
        >
          <div
            class="fr pointer pr5-ns pt5-ns pr4 pt4"
          >
            <div
              aria-label="Modal Close Button"
              class="ph3-ns pt3-ns pb2-ns ph2 pt2 pb1 br2 hover-b--transparent hover-bg-action-secondary hover-b--action-secondary"
              role="button"
              tabindex="0"
            >
              <svg
                class="vtex__icon-close  "
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <g
                  fill="black"
                >
                  <path
                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ph7 ph8-ns t-body overflow-auto flex flex-column flex-shrink-1 flex-grow-1 undefined undefined undefined mb3"
      >
        Foo
      </div>
      <div
        class="flex justify-content flex-row-reverse min-h-regular-ns min-h-small pv6-ns ph8-ns pv7 ph7 mt3 bt b--muted-4"
      >
        <div>
          <div>
            <span
              class="mr4"
            >
              <button
                class="vtex-button bw1 ba fw5 v-mid relative pa0 lh-solid br2 min-h-small t-action--small bg-transparent b--transparent c-disabled "
                disabled=""
                tabindex="0"
                type="button"
              >
                <div
                  class="vtex-button__label flex items-center justify-center h-100 ph5 "
                  style="padding-top: .25em; padding-bottom: .32em;"
                >
                  cancel
                </div>
              </button>
            </span>
            <button
              class="vtex-button bw1 ba fw5 v-mid relative pa0 lh-solid br2 min-h-small t-action--small bg-disabled b--muted-5 c-on-disabled "
              tabindex="0"
              type="button"
            >
              <span
                class="vtex-button__spinner-container top-0 left-0 w-100 h-100 absolute flex justify-center items-center"
              >
                <svg
                  class="vtex__icon-spinner  c-action-primary"
                  height="15"
                  preserveAspectRatio="xMidYMid"
                  viewBox="0 0 100 100"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <style>
                    
            @keyframes vtex-spinner-rotate {
              from {
                transform-origin: 50% 50%;
                transform: rotate(0deg);
              }
              to {
                transform-origin: 50% 50%;
                transform: rotate(360deg);
              }
            }

            @keyframes vtex-spinner-fill {
              0% {
                stroke-dasharray: 0 0 2 251.32741228718345;
              }
              50% {
                stroke-dasharray: 0 0 188.49555921538757 251.32741228718345;
              }
              100% {
                stroke-dasharray: 0 249.32741228718345 188.49555921538757 251.32741228718345;
              }
            }

            .vtex-spinner_circle {
              animation: vtex-spinner-fill 1.25s infinite cubic-bezier(0.455, 0.030, 0.515, 0.955), vtex-spinner-rotate 0.625s infinite linear;
            }
          
                  </style>
                  <circle
                    class="vtex-spinner_circle"
                    cx="50"
                    cy="50"
                    fill="none"
                    r="40"
                    stroke="currentColor"
                    stroke-dasharray="0 0 188.49555921538757 251.32741228718345"
                    stroke-dashoffset="1"
                    stroke-linecap="round"
                    stroke-width="10"
                  />
                </svg>
              </span>
              <span
                class="vtex-button__label flex items-center justify-center h-100 ph5  o-0"
              >
                confirm
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
